# mypower

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.MIT  README.md  install_android.sh
cmake/: scan_test.cmake
dsl/: CMakeLists.txt  cmd.cpp  cmd.hpp  dsl.cpp  dsl.hpp  dsl.py  expr.cpp  expr.hpp  test_cmd.cpp  test_expr_literal.cpp  test_expr_math.cpp
examples/: CMakeLists.txt  dummy.cpp  ncurses_example.cpp
src/: CMakeLists.txt  chproc.cpp  cmd.cpp  cmd.hpp  cmd_attach.cpp  cmd_dump.cpp  cmd_pointer.cpp  cmd_proc.cpp  cmd_region.cpp  cmd_scan.cpp  cmd_scan.hpp  cmd_session.cpp  cmd_snapshot.cpp  cmd_test.cpp  cmd_u3d.cpp  cmd_utils.cpp  cmd_view.cpp  cmdline.cpp  cmdline.hpp  comparator.hpp  compexpr.hpp  dsl.cpp  dsl.hpp  dsl.py  expr.cpp  expr.hpp  findref.cpp  macros.hpp  matchvalue.hpp  mathexpr.cpp  mathexpr.hpp  mypower.cpp  mypower.hpp  operators.hpp  process.cpp  process.hpp  processlist.cpp  processlist.hpp  raii.hpp  scan.cpp  (+11 more)
tests/: CMakeLists.txt  test_command_scan.cpp  test_expr_compexpr.cpp  test_expr_literal.cpp  test_expr_math.cpp  test_expr_opt.cpp  test_expr_ref.cpp  test_expr_sign.cpp  test_scanner_aligned.cpp  test_scanner_unaligned.cpp
tui/: CMakeLists.txt  tui.cpp  tui.hpp  tui_example.cpp
